--- a/api/pom.xml
+++ b/api/pom.xml
@@ -17,4 +17,11 @@
         <module>file-service-66</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.cherry</groupId>
+            <artifactId>cloudchat-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
