--- a/cloudchat-pojo/pom.xml
+++ b/cloudchat-pojo/pom.xml
@@ -11,4 +11,12 @@
 
     <artifactId>cloudchat-pojo</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.cherry</groupId>
+            <artifactId>cloudchat-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+    
 </project>
