注册为微服务, 引入nacos, 网关, 不是多模块开发

--- a/api/file-service-66/src/main/resources/application.yaml
+++ b/api/file-service-66/src/main/resources/application.yaml
@@ -4,3 +4,14 @@ server:
     uri-encoding: utf-8
 #    请求大小不限制
     max-swallow-size: -1
+    
+spring:
+  application:
+    name: file-service
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
+        username: nacos
+        password: nacos
+        ip: 127.0.0.1  # 强制指定注册IP
