--- a/cloudchat-common/pom.xml
+++ b/cloudchat-common/pom.xml
@@ -41,6 +41,10 @@
 <!--            <groupId>org.springframework.cloud</groupId>-->
 <!--            <artifactId>spring-cloud-starter-openfeign</artifactId>-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
         <!-- 引入nacos注册中心 -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
