--- a/api/base-service/pom.xml
+++ b/api/base-service/pom.xml
@@ -5,9 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.cherry</groupId>
-        <artifactId>cloudchat-backend</artifactId>
+        <artifactId>api</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>base-service</artifactId>
@@ -17,5 +16,6 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    
 
 </project>
