--- a/api/main-service-77/src/main/resources/application.yaml
+++ b/api/main-service-77/src/main/resources/application.yaml
@@ -25,6 +25,17 @@ spring:
         username: nacos
         password: nacos
         ip: 127.0.0.1  # 强制指定注册IP
+        
+mybatis-plus:
+  mapper-scan: com.cherry.mapper
+  configuration:
+    map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  global-config:
+    db-config:
+      logic-delete-field: isDelete # 全局逻辑删除的实体字段名
+      logic-delete-value: 1 # 逻辑已删除值（默认为 1）
+      logic-not-delete-value: 0 # 逻辑未删除值（默认为 0）
 
 springdoc:
   swagger-ui:
