--- a/cloudchat-common/pom.xml
+++ b/cloudchat-common/pom.xml
@@ -89,6 +89,10 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
         <!-- Knife4j Plugin -->
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
@@ -98,6 +102,10 @@
         <dependency>
             <groupId>com.google.zxing</groupId> 
             <artifactId>core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-jsqlparser</artifactId>
         </dependency>
     </dependencies>
 
