--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,16 @@
                 <artifactId>core</artifactId>
                 <version>3.4.1</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.16.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-jsqlparser</artifactId>
+                <version>3.5.11</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
