--- a/api/main-service-77/pom.xml
+++ b/api/main-service-77/pom.xml
@@ -10,6 +10,12 @@
     </parent>
 
     <artifactId>main-service-77</artifactId>
-    
 
+    <dependencies>
+        <dependency>
+            <groupId>com.cherry</groupId>
+            <artifactId>base-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
