--- a/cloudchat-common/pom.xml
+++ b/cloudchat-common/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>cloudchat-common</artifactId>
-    
+
     <dependencies>
         <!-- 引入SpringBoot 依赖-->
         <dependency>
@@ -45,7 +45,7 @@
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
         </dependency>
-<!--        mybatis-plus相关依赖-->
+        <!--        mybatis-plus相关依赖-->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
@@ -84,7 +84,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-<!--        hutool工具类-->
+        <!--        hutool工具类-->
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
@@ -100,12 +100,16 @@
             <version>4.4.0</version>
         </dependency>
         <dependency>
-            <groupId>com.google.zxing</groupId> 
+            <groupId>com.google.zxing</groupId>
             <artifactId>core</artifactId>
         </dependency>
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-jsqlparser</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
         </dependency>
     </dependencies>
 
