新增rabbitmq, 实现消息落地

--- a/api/chat-server-8875/src/main/resources/application.yaml
+++ b/api/chat-server-8875/src/main/resources/application.yaml
@@ -1,5 +1,11 @@
 
 spring:
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: cloudchat
+    password: cloudchat
+    virtual-host: cloudchat
   data:
     redis:
       host: localhost
