--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+application-prod.yml
+application-prod.yaml
+*.local.yaml
+*.secret.yaml
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
