后端部署版本, 但是由于Long的精度问题, 前端无法展示

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+bootstrap-prod.yaml
+bootstrap-prod.yml
 application-prod.yml
 application-prod.yaml
 *.local.yaml
