--- a/api/auth-service-88/pom.xml
+++ b/api/auth-service-88/pom.xml
@@ -10,7 +10,15 @@
     </parent>
 
     <artifactId>auth-service-88</artifactId>
-
-
-
+    
+    
+    <build>
+        <finalName>${project.artifactId}-${parent.version}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
