--- a/gateway-1000/src/main/resources/bootstrap.yaml
+++ b/gateway-1000/src/main/resources/bootstrap.yaml
@@ -7,7 +7,7 @@ spring:
         server-addr: localhost:8848
         username: nacos
         password: nacos
-        ip: 127.0.0.1  # 强制指定注册IP
+#        ip: 127.0.0.1  # 强制指定注册IP
         file-extension: yaml
   profiles:
     active: dev
