--- a/api/chat-server-8875/pom.xml
+++ b/api/chat-server-8875/pom.xml
@@ -30,6 +30,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.50</version>
+        </dependency>
+
 
         <dependency>
             <groupId>com.cherry</groupId>
